# diplomatieke-getuigenissen

./: .gitignore  Dockerfile  entrypoint.sh  pyproject.toml  readme.md  requirements.txt
src/: app.py  config.py  elastic_index.py  record.py
src/frontend/: index.html  package-lock.json  package.json  tailwind.config.js
src/frontend/src/: app.jsx  index.css  index.jsx
src/frontend/src/components/: bibliografie.jsx  chapters.jsx  detail.jsx  diplomaten.jsx  interviews.jsx  resultcard.jsx  search.jsx  stationeringen.jsx  transcript.jsx  video.jsx
src/frontend/src/facets/: freeTextFacet.jsx  listFacet.jsx
src/frontend/src/hooks/: useTrackCues.jsx
src/frontend/src/misc/: config.js  icons.jsx  loading.jsx  utils.js
src/frontend/src/pageElements/: footer.jsx  header.jsx
